# ogl

./: .gitignore  CMakeLists.txt  generate_project.bat  main.cpp
include/: app.h  app.hpp  body.h  bodyBase.h  config.h  core.h  core.hpp  input.h  inputBase.h  inputOrbit.h  mainwindow.hpp  particle.h  point.h  rigidBase.h  tutorial1.h  tutorial2.h  tutorial2.hpp  tutorial3.hpp  tutorial4.hpp
include/geometry/: body.h  body.hpp  cube.h  cube.hpp  grid.h  grid.hpp  line.hpp  sphere.h  sphere.hpp
src/: SingleColor.fragmentshader  app.cpp  body.cpp  bodyBase.cpp  core.cpp  input.cpp  inputBase.cpp  inputOrbit.cpp  main.cpp  mainwindow.cpp  particle.cpp  point.cpp  rigidBase.cpp  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp
src/geometry/: body.cpp  cube.cpp  grid.cpp  line.cpp  sphere.cpp
src/tutorial1/: tutorial1.cpp
